--- a/azure-aks.yaml
+++ b/azure-aks.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
       - name: my-python-app
-        image: crnew.azurecr.io/pythonappaks:latest
+        image: crnew.azurecr.io/rakeshreddytazurepythonappaks:latest
         imagePullPolicy: Always
         ports:
         - containerPort: 5000
