Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -28,6 +28,15 @@ stages:
     pool:
       vmImage: $(vmImageName)
     steps:
+
+    - task: SonarQubePrepare@5
+      inputs:
+        SonarQube: 'kubernetes'
+        scannerMode: 'CLI'
+        configMode: 'manual'
+        cliProjectKey: 'kubernetes_kubernetes'
+        cliProjectName: 'kubernetes'
+        cliSources: '.'
     - task: Docker@2
       displayName: Build and push an image to container registry
       inputs:
@@ -38,6 +47,8 @@ stages:
         tags: |
           $(tag)
           latest 
+
+    - task: SonarQubeAnalyze@5
 
     - task: CopyPublishBuildArtifacts@1
       inputs:
